Resolves: tdf#117005 undo/redo skips comment when switching sheets

while insert comment is active

regression from....

commit 80509950d35cebaede89fcb52c446a1fd3e45ba3
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Mon Jul 4 15:31:29 2016 +0100

    Resolves: tdf#100761 after insert note, focus cannot return to inputbar

which is a suspected regression from.

commit 11d605cc5a0c221d2423b6e63f502db660d085d2
Date:   Mon Feb 1 18:39:51 2016 +0200

    tdf#84843 Stop using PseudoSlots for drawing slots

Change-Id: Id4614624cbb85411ba0d368ae072a05f5f9e09ad
Reviewed-on: https://gerrit.libreoffice.org/53799
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit 34e5922c2dea4bb3a54c3df3822b9d843c5be277)