sc/source/ui/view/tabview5.cxx
@@ -372,7 +372,8 @@ void ScTabView::DrawDeselectAll()
     if (pDrawView)
     {
         ScTabViewShell* pViewSh = aViewData.GetViewShell();
-        if (pDrawActual && pViewSh->IsDrawTextShell())
+        if ( pDrawActual &&
+            ( pViewSh->IsDrawTextShell() || pDrawActual->GetSlotID() == SID_DRAW_NOTEEDIT ) )
         {
             // end text edit (as if escape pressed, in FuDraw)
             aViewData.GetDispatcher().Execute( pDrawActual->GetSlotID(),
